apps/user-juan/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vivado
spec:
  selector:
    vm.kubevirt.io/name: vivado
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
  type: ClusterIP
