apps/user-juan/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vivado
  namespace: user-juan
spec:
  podSelector:
     matchLabels:
       vm.kubevirt.io/name: vivado
  ingress:
    - ports:
        - port: 22
          protocol: TCP
        - port: 5901
          protocol: TCP
      from:
        - namespaceSelector: {}
  policyTypes:
    - Ingress
